static/global.css
@import url("https://fonts.googleapis.com/css?family=Roboto|Rubik:300,400,700&display=swap");

:root {
  --stripe: url("data:image/svg+xml,%3Csvg width='6' height='6' viewBox='0 0 6 6' xmlns='http://www.w3.org/2000/svg'%3E%3Cg fill='%23000000' fill-opacity='0.16' fill-rule='evenodd'%3E%3Cpath d='M5 0h1L0 6V5zM6 5v1H5z'/%3E%3C/g%3E%3C/svg%3E");
  /* --main-color: #4b6cc1; */
  --main-color: #c31f09;
  --main-bg: #191a1d;
}

body {
  margin: 0;
  padding: 0;
  font-family: "Roboto", sans-serif;
  font-size: 18px;
  line-height: 1.5;
  color: #333;
}

h1,
h2,
h3,
h4,
h5,
h6 {
  font-family: "Rubik", sans-serif;
  margin: 0;
  line-height: 1.2;
}

h1 {
  font-size: 2em;
}

a {
  color: inherit;
  text-decoration: none;
}

code {
  font-family: menlo, inconsolata, monospace;
  font-size: calc(1em - 2px);
  color: #555;
  background-color: #f0f0f0;
  padding: 0.2em 0.4em;
  border-radius: 2px;
}

section {
  padding: 4em 20%;
}

.first-h2,
h1.first {
  font-size: 3em;
  text-transform: uppercase;
  text-align: center;
  margin-top: 1em;
}

.first-h2 span,
h1.first span {
  font-weight: 300;
}

.header-bg {
  position: fixed;
  top: 0;
  left: 0;
  width: 100vw;
  height: 60px;
  background: #143e7e;
  color: #fff;
}

.main-bg-hero {
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  background-color: #191a1d;
  width: 100%;
  height: 60vh;
}

.main-title-hero {
  display: flex;
  flex-direction: column;
  padding: 0 5%;
  opacity: 1;
  margin-top: 100px;
}

.phone-number {
  font-size: 40px !important;
}

button {
  display: flex;
  padding: 15px 25px;
  background-color: #000;
  /* background-image: var(--stripe); */
  color: #f7f8f8;
  border: 2px solid #000;
  font-size: 16px;
  opacity: 1;
  text-transform: uppercase;
  transition: 0.3s ease-in-out;
  font-weight: 400;
  border-radius: 0;
}

button:hover {
  cursor: pointer;
  background: transparent;
  color: #000;
  border: 2px solid #000;
  transition: 0.3s ease-in-out;
}

button:focus {
  outline: none;
}

hr {
  width: 50%;
  border: none;
  height: 5px;
  background-color: #ccc;
  border-radius: 15px;
  margin-top: 3em;
}

.underline-wrapper {
  width: 100%;
  border-bottom: 4px solid #f3f1f1;
  margin-top: 15px;
}

.underline-wrapper h3 {
  font-size: 1.5em;
  text-transform: uppercase;
}

.underline-wrapper h3 span {
  color: #9c9898;
}

.centered {
  display: flex;
  align-items: center;
  justify-content: center;
}

.form-btn {
  margin: 3em auto;
  max-width: 90%;
}

.btn-contact {
  background: var(--main-color);
  background-image: var(--stripe);
  color: #f7f8f8;
  border: 2px solid var(--main-color);
}

.btn-contact:hover {
  background: transparent;
  color: var(--main-color);
  border: 2px solid var(--main-color);
}

@media (max-width: 1024px) {
  section {
    padding: 4em;
  }

  .first-h2,
  h1.first {
    margin-top: 0.5em;
  }

  p {
    font-size: 18px;
  }
}

@media (max-width: 768px) {
  body {
    font-size: 16px;
  }

  section {
    padding: 4em 2em;
  }

  .first-h2,
  h1.first {
    font-size: 2.2em;
    margin-top: 0.5em;
  }

  button {
    padding: 20px 30px;
  }

  .phone-number {
    font-size: 26px !important;
  }
}

@media (max-width: 420px) {
  section {
    padding: 4em 1.5em;
  }
  .main-bg-hero {
    height: 70vh;
    transform: skew(0deg, 3deg);
  }
  .main-title-hero {
    transform: skew(0deg, -3deg);
  }
  .underline-wrapper {
    margin-top: 1em;
  }

  .first-h2,
  h1.first {
    font-size: 2em;
  }
}

@media (max-width: 320px) {
  section {
    padding: 4em 1em;
  }
  .first-h2,
  h1.first {
    font-size: 1.6em;
  }
}

