repair layout problem on mobile phones

--- a/static/global.css
+++ b/static/global.css
@@ -62,16 +62,6 @@ h1.first span {
   font-weight: 300;
 }
 
-.header-bg {
-  position: fixed;
-  top: 0;
-  left: 0;
-  width: 100vw;
-  height: 60px;
-  background: #143e7e;
-  color: #fff;
-}
-
 .main-bg-hero {
   display: flex;
   flex-direction: column;
